tests/specs/interface_generic_extends.txt
# mod.ts
export interface Interface<V> extends Iterable<V> {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export interface Interface<V> extends Iterable<V> {}
  | ^

# output.txt
Defined in file:///mod.ts:0:1

interface Interface<V> extends Iterable<V>



# output.json
{
  "symbols": [
    {
      "name": "Interface",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 0,
            "byteIndex": 0
          },
          "declarationKind": "export",
          "kind": "interface",
          "def": {
            "extends": [
              {
                "repr": "Iterable",
                "kind": "typeRef",
                "value": {
                  "typeParams": [
                    {
                      "repr": "V",
                      "kind": "typeRef",
                      "value": {
                        "typeName": "V",
                        "resolution": {
                          "kind": "typeParam",
                          "declaringName": "Interface",
                          "declaringKind": "interface"
                        }
                      }
                    }
                  ],
                  "typeName": "Iterable"
                }
              }
            ],
            "typeParams": [
              {
                "name": "V"
              }
            ]
          }
        }
      ]
    }
  ]
}
